replaced dummy text main.php, fixed z-index problem with searchbox, small tweaks to index.php

--- a/trunk/www/style.css
+++ b/trunk/www/style.css
@@ -35,6 +35,7 @@ a:visited:hover { color: #000000; }
 	height: 110px;
 	left: 5px;
 	right: 200px;
+	z-index:-1
 }
 
 .header h1 { /* Title banner */
@@ -61,7 +62,7 @@ a:visited:hover { color: #000000; }
 	left: 500px;
 	margin-right: 10px;
 	margin-top:0px;
-	z-index:1;
+	z-index:5;
 }
 
 .login p {
@@ -77,7 +78,7 @@ a:visited:hover { color: #000000; }
 	position: relative;
 	top: 60px;
 	left: 197px;
-	z-index:-1;
+	z-index:2;
 	overflow-x:hidden; /* Disables horizontal scrollbar */
 }
 
